feat: Elite 5-role seeding, Dynamic YouTube Fallback, and Gemini Roadmap Refinement