@@ -1,5 +1,6 @@
 package com.skillbridge.careernavigator.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.skillbridge.careernavigator.entity.Skill;
 import com.skillbridge.careernavigator.exception.RoadmapGenerationException;
@@ -17,10 +18,7 @@ import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -35,13 +33,12 @@ class RoadmapGenerationServiceTest {
     @Mock
     private ObjectMapper objectMapper;
 
-    // Use a direct instance instead of a mock so we can inject RestTemplate via Reflection
     private RoadmapGenerationService roadmapGenerationService;
 
     @Mock
     private RestTemplate restTemplate;
 
-    private Skill javaSkill, sqlSkill;
+    private Skill javaSkill;
 
     @BeforeEach
     void setUp() {
@@ -50,43 +47,50 @@ class RoadmapGenerationServiceTest {
         ReflectionTestUtils.setField(roadmapGenerationService, "llmApiUrl", "http://fake-api");
         ReflectionTestUtils.setField(roadmapGenerationService, "llmApiKey", "fake-key");
 
-        javaSkill = new Skill(); javaSkill.setId(UUID.randomUUID()); javaSkill.setName("Java");
-        sqlSkill = new Skill(); sqlSkill.setId(UUID.randomUUID()); sqlSkill.setName("SQL");
+        javaSkill = new Skill(); 
+        javaSkill.setId(UUID.randomUUID()); 
+        javaSkill.setName("Java");
     }
 
     @Test
     void generateRoadmap_ValidResponse() throws Exception {
         // Arrange
-        Map<String, Object> fakeMessage = Map.of("content", "{\"week_1\": [\"Java\"]}");
-        Map<String, Object> fakeChoice = Map.of("message", fakeMessage);
-        Map<String, Object> mockResponse = Map.of("choices", List.of(fakeChoice));
+        Map<String, Object> textPart = Map.of("text", "{\"roadmap_details\": \"Step 1\", \"suggested_certifications\": [\"Cert A\"]}");
+        Map<String, Object> content = Map.of("parts", Collections.singletonList(textPart));
+        Map<String, Object> candidate = Map.of("content", content);
+        Map<String, Object> mockResponse = Map.of("candidates", Collections.singletonList(candidate));
 
         ResponseEntity<Map> responseEntity = new ResponseEntity<>(mockResponse, HttpStatus.OK);
 
         when(restTemplate.exchange(anyString(), eq(HttpMethod.POST), any(HttpEntity.class), eq(Map.class)))
                 .thenReturn(responseEntity);
 
-        Map<String, List<String>> expectedMappedOutput = Map.of("week_1", List.of("Java"));
-        when(objectMapper.readValue(anyString(), any(com.fasterxml.jackson.core.type.TypeReference.class)))
-                .thenReturn(expectedMappedOutput);
+        Map<String, Object> expectedOutput = new HashMap<>();
+        expectedOutput.put("roadmap_details", "Step 1");
+        expectedOutput.put("suggested_certifications", Collections.singletonList("Cert A"));
+
+        when(objectMapper.readValue(anyString(), any(TypeReference.class)))
+                .thenReturn(expectedOutput);
 
         // Act
-        Map<String, List<String>> roadmap = roadmapGenerationService.generateRoadmap(Arrays.asList(javaSkill), "beginner", 10);
+        Map<String, Object> roadmap = roadmapGenerationService.generateRoadmap(Collections.singletonList(javaSkill), "beginner", 10);
 
         // Assert
-        assertThat(roadmap).containsEntry("week_1", List.of("Java"));
+        assertThat(roadmap).containsKey("roadmap_details");
+        assertThat(roadmap.get("roadmap_details")).isEqualTo("Step 1");
+        assertThat((List)roadmap.get("suggested_certifications")).contains("Cert A");
     }
 
     @Test
     void generateRoadmap_EmptyResponse() {
         assertThrows(RoadmapGenerationException.class, () -> {
-            Map<String, Object> mockResponse = Map.of("choices", List.of()); // Empty choices
+            Map<String, Object> mockResponse = Map.of("candidates", Collections.emptyList());
             ResponseEntity<Map> responseEntity = new ResponseEntity<>(mockResponse, HttpStatus.OK);
 
             when(restTemplate.exchange(anyString(), eq(HttpMethod.POST), any(HttpEntity.class), eq(Map.class)))
                     .thenReturn(responseEntity);
 
-            roadmapGenerationService.generateRoadmap(Arrays.asList(javaSkill), "beginner", 10);
+            roadmapGenerationService.generateRoadmap(Collections.singletonList(javaSkill), "beginner", 10);
         });
     }
 
@@ -96,27 +100,7 @@ class RoadmapGenerationServiceTest {
             when(restTemplate.exchange(anyString(), eq(HttpMethod.POST), any(HttpEntity.class), eq(Map.class)))
                     .thenThrow(new RestClientException("Timeout"));
 
-            roadmapGenerationService.generateRoadmap(Arrays.asList(javaSkill), "beginner", 10);
-        });
-    }
-
-    @Test
-    void generateRoadmap_HallucinatedSkillThrowsException() throws Exception {
-        Map<String, Object> fakeMessage = Map.of("content", "{\"week_1\": [\"Java\", \"C++\"]}");
-        Map<String, Object> fakeChoice = Map.of("message", fakeMessage);
-        Map<String, Object> mockResponse = Map.of("choices", List.of(fakeChoice));
-
-        ResponseEntity<Map> responseEntity = new ResponseEntity<>(mockResponse, HttpStatus.OK);
-
-        when(restTemplate.exchange(anyString(), eq(HttpMethod.POST), any(HttpEntity.class), eq(Map.class)))
-                .thenReturn(responseEntity);
-
-        Map<String, List<String>> hallucinatedOutput = Map.of("week_1", Arrays.asList("Java", "C++")); // C++ wasn't sent
-        when(objectMapper.readValue(anyString(), any(com.fasterxml.jackson.core.type.TypeReference.class)))
-                .thenReturn(hallucinatedOutput);
-
-        assertThrows(RoadmapGenerationException.class, () -> {
-            roadmapGenerationService.generateRoadmap(Arrays.asList(javaSkill), "beginner", 10);
+            roadmapGenerationService.generateRoadmap(Collections.singletonList(javaSkill), "beginner", 10);
         });
     }
 }
